Apply reversible Haste tool enchantments